--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My project</title>
 </head>
 <body>
-    <header>Header</header>
+    <header>Header 123</header>
     <main></main>
     <footer>Hello Footer!</footer>
     1
