--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 </head>
 <body>
     <header>Header 123</header>
-    <main></main>
-    <footer>Hello Footer!</footer>
-    1
-    223
-    3
+    <main>Main</main>
+    <footer>Hello Footer</footer>
 </body>
 </html>
